# games-backlog

./: .gitignore  backlog.db  cabal.project.freeze  fix_ambiguous.py  fix_attributes.py  fix_attributes2.py  fix_backlog_layout.py  fix_balance.py  fix_card_size.py  fix_card_spacing.py  fix_db.py  fix_h.py  fix_h.sh  fix_handles.py  fix_handles_sort.py  fix_header.py  fix_id.py  fix_lambda_hard.py  fix_lambda_sed.py  fix_lexical.py  fix_manual.py  fix_mobile_closer.py  fix_mobile_column.py  fix_mobile_fonts.py  fix_mobile_spacing.py  fix_rec_page.py  fix_weights.py  fix_weights_again.py  force_fix.py  force_mobile.py  games-backlog.cabal  patch_igdb.py  remove_action_theme.py  test_accents.hs  update_both.py  update_db.py  update_handles.py  update_main.py  update_navbars.py
app/: Main.hs  app.bat
app/Api/: Igdb.hs  igdb_settings.txt
app/Components/: EditModal.hs  GameCard.hs
app/DB/: DB.hs
app/Models/: Games.hs
app/Pages/: AddGame.hs  Backlog.hs  Confirm.hs  Index.hs  Login.hs  Recomendation.hs  Register.hs  Selection.hs  Tournament.hs
app/Utils/: Data.hs  Format.hs  Handles.hs  Session.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
