cabal-version:      3.0

name:               games-backlog
version:            0.1.0.0
synopsis:           Um simples backlog para registrar games
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mateus Cardoso
maintainer:         151787016+mateus250402@users.noreply.github.com
category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable games-backlog
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded

    -- Módulos do projeto
    other-modules:    Api.Igdb,
                      DB.DB,
                      Models.Games,
                      Pages.AddGame,
                      Pages.Backlog,
                      Pages.Recomendation,
                      Components.GameCard,
                      Components.EditModal,
                      Pages.Confirm,
                      Pages.Index,
                      Pages.Login,
                      Pages.Register,
                      Pages.Selection,
                      Utils.Data,
                      Utils.Format,
                      Utils.Handles,
                      Utils.Session

    -- Linguagem e extensões
    default-language: Haskell2010
    other-extensions: OverloadedStrings

    -- Dependências
    build-depends:    base ^>=4.18.3.0,
                      scotty,
                      lucid,
                      random,
                      aeson,
                      text,
                      bytestring,
                      sqlite-simple,
                      crypton,
                      base64-bytestring,
                      memory,
                      http-types,
                      cookie,
                      blaze-builder,
                      wai,
                      http-conduit,
                      hspec

    -- Diretório com os arquivos Haskell
    hs-source-dirs:   app

test-suite games-backlog-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app
    main-is:            Testes.hs

    build-depends:      base,
                        hspec,
                        text,
                        random,
                        scotty,
                        lucid,
                        aeson,
                        bytestring,
                        sqlite-simple,
                        crypton,
                        base64-bytestring,
                        memory,
                        http-types,
                        cookie,
                        blaze-builder,
                        wai,
                        QuickCheck,
                        http-conduit

    other-modules:      Utils.Data,
                        Utils.Format,
                        Models.Games,
                        DB.DB,
                        Api.Igdb

    default-language:   Haskell2010
    other-extensions:   OverloadedStrings
